; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/tcp_stacks/extr_bbr.c_bbr_strike_dupack.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/tcp_stacks/extr_bbr.c_bbr_strike_dupack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcp_bbr = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.bbr_sendmap = type { i32 }

@DUP_ACK_THRESHOLD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcp_bbr*)* @bbr_strike_dupack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bbr_strike_dupack(%struct.tcp_bbr* %0) #0 {
  %2 = alloca %struct.tcp_bbr*, align 8
  %3 = alloca %struct.bbr_sendmap*, align 8
  store %struct.tcp_bbr* %0, %struct.tcp_bbr** %2, align 8
  %4 = load %struct.tcp_bbr*, %struct.tcp_bbr** %2, align 8
  %5 = getelementptr inbounds %struct.tcp_bbr, %struct.tcp_bbr* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = call %struct.bbr_sendmap* @TAILQ_FIRST(i32* %6)
  store %struct.bbr_sendmap* %7, %struct.bbr_sendmap** %3, align 8
  %8 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %3, align 8
  %9 = icmp ne %struct.bbr_sendmap* %8, null
  br i1 %9, label %10, label %29

10:                                               ; preds = %1
  %11 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %3, align 8
  %12 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp slt i32 %13, 255
  br i1 %14, label %15, label %29

15:                                               ; preds = %10
  %16 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %3, align 8
  %17 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 4
  %20 = load %struct.bbr_sendmap*, %struct.bbr_sendmap** %3, align 8
  %21 = getelementptr inbounds %struct.bbr_sendmap, %struct.bbr_sendmap* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @DUP_ACK_THRESHOLD, align 4
  %24 = icmp sge i32 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %15
  %26 = load %struct.tcp_bbr*, %struct.tcp_bbr** %2, align 8
  %27 = getelementptr inbounds %struct.tcp_bbr, %struct.tcp_bbr* %26, i32 0, i32 0
  store i32 1, i32* %27, align 4
  br label %28

28:                                               ; preds = %25, %15
  br label %29

29:                                               ; preds = %28, %10, %1
  ret void
}

declare dso_local %struct.bbr_sendmap* @TAILQ_FIRST(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
